[package]
name = "formfn-auction-house"
version = "0.1.0"
description = "Formfunction auction house program"
authors = ["Formfunction Developers"]
repository = "https://github.com/formfunction-hq/formfn-auction-house"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "formfn_auction_house"

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = {version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = "0.26.0"
arrayref = "0.3.6"
campaign-treasury-manager = { version = "0.0.7", registry = "formfunction-hq", features = ["cpi"] }
mpl-token-metadata = { version = "1.7.0", features = ["no-entrypoint"] }
num-traits = "0.2"
num-derive = "0.2"
solana-security-txt = "1.0.2"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = [
  "no-entrypoint",
] }
thiserror = "1.0"
